--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   display: flex; /* or grid */
+  flex-direction: column; /* Stack elements vertically */
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -43,56 +44,15 @@ input[type="text"]:focus {
   box-shadow: 0 0 5px #aecdee;
 }
 
-.keyLetter {
-  width: 10%;
-  height: 60px;
-  font-size: 30px;
-  text-align: center;
-  text-transform: uppercase;
-  background-color: #ffffff;
-  color: #333333;
-  margin: 5px auto;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.keyboard {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 50px;
-}
-
-button {
-  width: 100px;
-  height: 50px;
-  margin: 10px;
-  border-radius: 10px;
-  font-size: 20px;
-  color: white;
-  background-color: #28a745;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s ease-in-out;
-}
-
-button:hover {
-  background-color: #218838;
-  transform: translateY(-2px);
-}
-
 .keyboardBase {
   max-width: 1050px;
-  position: absolute;
   padding: 10px;
-  left: 50%;
-  bottom: 10%;
-  transform: translate(-50%, -50%);
   background-color: #e1d5d5;
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-gap: 10px;
-  justify-content: center;
+  justify-content: center; /* Center grid items */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
